--- a/app/src/main/res/layout/activity_postnotification.xml
+++ b/app/src/main/res/layout/activity_postnotification.xml
@@ -30,7 +30,7 @@
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
-            app:title="@string/comments"
+            app:title="Featured Post"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp">
 
@@ -49,23 +49,25 @@
         android:layout_height="wrap_content" />
 
     <androidx.cardview.widget.CardView
+        android:visibility="gone"
         android:layout_below="@+id/appBar"
         android:layout_width="match_parent"
-        app:cardCornerRadius="@dimen/_15sdp"
-        android:id="@+id/cardVIew"
+        android:id="@+id/cardView"
         android:layout_height="wrap_content"
-
         android:layout_margin="@dimen/_5sdp"
-        app:elevation="@dimen/_5sdp">
+
+
+        app:cardCornerRadius="@dimen/_15sdp"
+        app:elevation="@dimen/_4sdp">
 
         <LinearLayout
-            android:padding="@dimen/_8sdp"
-            android:background="?attr/selectableItemBackground"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:orientation="vertical">
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical"
+
+            android:padding="@dimen/_8sdp">
 
             <ImageView
                 android:id="@+id/imgpostType"
@@ -88,7 +90,7 @@
                     android:src="@drawable/ic_user" />
 
                 <TextView
-android:fontFamily="@font/poppinsregular"
+                    android:fontFamily="@font/poppinsregular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_10sdp"
@@ -98,8 +100,8 @@ android:fontFamily="@font/poppinsregular"
                     android:textSize="@dimen/_12sdp" />
 
                 <TextView
-                    android:id="@+id/txtName"
                     android:fontFamily="@font/poppinsregular"
+                    android:id="@+id/txtName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_5sdp"
@@ -107,53 +109,56 @@ android:fontFamily="@font/poppinsregular"
                     android:textColor="@color/Black"
                     android:textSize="@dimen/_12sdp"
                     android:textStyle="bold" />
+
                 <TextView
-                    android:text="sqssss"
-                    android:gravity="right"
                     android:fontFamily="@font/poppinsregular"
                     android:id="@+id/txtDateTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_5sdp"
+                    android:gravity="right"
+                    android:text="sqssss"
 
                     android:textColor="@color/Black"
                     android:textSize="@dimen/_10sdp" />
 
 
-
             </LinearLayout>
 
             <TextView
-                android:fontFamily="@font/poppinsmedium"
-                android:layout_marginTop="@dimen/_5sdp"
                 android:id="@+id/txtTitle"
+                android:fontFamily="@font/poppinsmedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_5sdp"
 
                 android:textColor="@color/Black"
                 android:textSize="@dimen/_12sdp" />
+
             <ImageView
-                android:layout_marginTop="@dimen/_5sdp"
                 android:id="@+id/imgPost"
-                android:scaleType="fitXY"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_150sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:scaleType="fitXY"
                 android:visibility="gone" />
 
             <RelativeLayout
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+
 
                 android:orientation="horizontal">
+
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
                     <info.androidhive.fontawesome.FontTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -165,12 +170,11 @@ android:fontFamily="@font/poppinsregular"
                         app:solid_icon="true" />
 
                     <TextView
-                        android:fontFamily="@font/poppinsregular"
                         android:id="@+id/txtViews"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="@dimen/_5sdp"
-
+                        android:fontFamily="@font/poppinsregular"
                         android:textColor="@color/Black"
                         android:textSize="@dimen/_12sdp" />
                 </LinearLayout>
@@ -185,27 +189,29 @@ android:fontFamily="@font/poppinsregular"
                         android:id="@+id/txtLike"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/_20sdp"
-                        android:text="@string/fa_heart"
-                        android:textColor="@color/Gray"
+
+                        android:text="@string/fa_comments_solid"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/_18sdp"
                         app:solid_icon="true" />
 
                     <TextView
-                        android:fontFamily="@font/poppinsregular"
+
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="@dimen/_5sdp"
-                        android:text="Like"
+                        android:text="Reply"
+                        android:fontFamily="@font/poppinsregular"
                         android:textColor="@color/Black"
                         android:textSize="@dimen/_12sdp" />
                 </LinearLayout>
 
 
                 <LinearLayout
-                    android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true">
+
                     <info.androidhive.fontawesome.FontTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -216,6 +222,7 @@ android:fontFamily="@font/poppinsregular"
 
                         android:textSize="@dimen/_18sdp"
                         app:solid_icon="true" />
+
                     <TextView
 
                         android:layout_width="wrap_content"
@@ -228,56 +235,35 @@ android:fontFamily="@font/poppinsregular"
                 </LinearLayout>
             </RelativeLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
+
+                <TextView
+                    android:id="@+id/txtCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:text="Featured Tags"
+                    android:fontFamily="@font/poppinsmedium"
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/_12sdp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:id="@+id/lvSubCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_10sdp" />
+            </LinearLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_margin="@dimen/_5sdp"
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/cardVIew"
-        android:layout_above="@+id/lvBottim"
-        android:scrollbars="vertical" />
-
-    <LinearLayout
-        android:id="@+id/lvBottim"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        android:background="@drawable/rounded_bg"
-        android:gravity="center_vertical"
-        android:elevation="@dimen/_6sdp">
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etMessage"
-            android:layout_width="0dp"
-            android:background="@null"
-            android:layout_weight="0.90"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:hint="Respond to Post"
-            android:layout_height="match_parent"/>
-        <info.androidhive.fontawesome.FontTextView
-            android:layout_width="0dp"
-            android:id="@+id/txtSendMessage"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_height="wrap_content"
-
-            android:layout_weight="0.1"
-            android:text="@string/fa_paper_plane"
-            android:textColor="@color/colorPrimary"
-
-            android:textSize="@dimen/_24sdp"
-            app:solid_icon="true" />
-    </LinearLayout>
 
 
 </RelativeLayout>
