--- a/app/src/main/res/layout/recyclerview_comments_row.xml
+++ b/app/src/main/res/layout/recyclerview_comments_row.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="@dimen/_10sdp"
-
+    app:cardElevation="@dimen/_5sdp"
+app:cardCornerRadius="@dimen/_5sdp"
     android:layout_margin="@dimen/_10sdp">
 
     <LinearLayout
