commited with working chats

--- a/app/src/main/res/layout/recyclerview_posts_row.xml
+++ b/app/src/main/res/layout/recyclerview_posts_row.xml
@@ -42,19 +42,12 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imgUser"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:src="@drawable/ic_user" />
 
-            <TextView
-android:fontFamily="@font/poppinsregular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:text="Posted By: "
 
-                android:textColor="@color/Black"
-                android:textSize="@dimen/_12sdp" />
 
             <TextView
                 android:fontFamily="@font/poppinsregular"
@@ -199,16 +192,6 @@ android:fontFamily="@font/poppinsregular"
             android:orientation="vertical">
 
 
-            <TextView
-                android:id="@+id/txtCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_5sdp"
-                android:text="Featured Tags"
-                android:fontFamily="@font/poppinsmedium"
-                android:textColor="@color/Black"
-                android:textSize="@dimen/_12sdp"
-                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/lvSubCategory"
