--- a/app/src/main/res/layout/recyclerview_posts_row.xml
+++ b/app/src/main/res/layout/recyclerview_posts_row.xml
@@ -158,6 +158,7 @@
 
 
             <LinearLayout
+                android:id="@+id/lvShare"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true">
