commited with working chats

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@ android:fontFamily="@font/poppinsmedium"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:gravity="center"
-                android:text="We"
+                android:text="Me"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/_25sdp"
                 android:textStyle="bold" />
@@ -62,7 +62,7 @@ android:fontFamily="@font/poppinsmedium"
             android:padding="@dimen/_10sdp"
             android:fontFamily="@font/poppinsregular"
             android:justificationMode="inter_word"
-            android:text="NearWe is for our everday real life situations. Keep it handy to get help and help others. Make new connections and friends with real people in your neighborhood and city, or while you are travelling or on a vacation"
+            android:text="NearMe is for our everday real life situations. Keep it handy to get help and help others. Make new connections and friends with real people in your neighborhood and city, or while you are travelling or on a vacation"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="@dimen/_12sdp"/>
