--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
+android:background="@drawable/bgcom"
     android:layout_height="match_parent"
-    android:background="#F1F1F1"
+
     android:orientation="vertical"
     tools:context=".ui.comments.CommentsActivity">
 
@@ -48,199 +48,18 @@
         android:indeterminate="true"
         android:layout_height="wrap_content" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_below="@+id/appBar"
-        android:layout_width="match_parent"
-        app:cardCornerRadius="@dimen/_15sdp"
-        android:id="@+id/cardVIew"
-        android:layout_height="wrap_content"
 
-        android:layout_margin="@dimen/_5sdp"
-        app:elevation="@dimen/_5sdp">
-
-        <LinearLayout
-            android:padding="@dimen/_8sdp"
-            android:background="?attr/selectableItemBackground"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imgpostType"
-                android:layout_width="@dimen/_13sdp"
-                android:layout_height="@dimen/_13sdp"
-                android:layout_gravity="right"
-                android:src="@drawable/roundicon"
-                app:tint="@android:color/holo_orange_dark" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="@dimen/_40sdp"
-                    android:layout_height="@dimen/_40sdp"
-                    android:src="@drawable/ic_user" />
-
-                <TextView
-android:fontFamily="@font/poppinsregular"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:text="Posted By: "
-
-                    android:textColor="@color/Black"
-                    android:textSize="@dimen/_12sdp" />
-
-                <TextView
-                    android:id="@+id/txtName"
-                    android:fontFamily="@font/poppinsregular"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_5sdp"
-                    android:capitalize="words"
-                    android:textColor="@color/Black"
-                    android:textSize="@dimen/_12sdp"
-                    android:textStyle="bold" />
-                <TextView
-                    android:text="sqssss"
-                    android:gravity="right"
-                    android:fontFamily="@font/poppinsregular"
-                    android:id="@+id/txtDateTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_5sdp"
-
-                    android:textColor="@color/Black"
-                    android:textSize="@dimen/_10sdp" />
-
-
-
-            </LinearLayout>
-
-            <TextView
-                android:fontFamily="@font/poppinsmedium"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:id="@+id/txtTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_5sdp"
-
-                android:textColor="@color/Black"
-                android:textSize="@dimen/_12sdp" />
-            <ImageView
-                android:layout_marginTop="@dimen/_5sdp"
-                android:id="@+id/imgPost"
-                android:scaleType="fitXY"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_150sdp"
-                android:visibility="gone" />
-
-            <RelativeLayout
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <info.androidhive.fontawesome.FontTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:text="@string/fa_eye"
-                        android:textColor="@color/DarkOrange"
-
-                        android:textSize="@dimen/_18sdp"
-                        app:solid_icon="true" />
-
-                    <TextView
-                        android:fontFamily="@font/poppinsregular"
-                        android:id="@+id/txtViews"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/_5sdp"
-
-                        android:textColor="@color/Black"
-                        android:textSize="@dimen/_12sdp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:orientation="horizontal">
-
-                    <info.androidhive.fontawesome.FontTextView
-                        android:id="@+id/txtLike"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/_20sdp"
-                        android:text="@string/fa_heart"
-                        android:textColor="@color/Gray"
-                        android:textSize="@dimen/_18sdp"
-                        app:solid_icon="true" />
-
-                    <TextView
-                        android:fontFamily="@font/poppinsregular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/_5sdp"
-                        android:text="Like"
-                        android:textColor="@color/Black"
-                        android:textSize="@dimen/_12sdp" />
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_alignParentRight="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <info.androidhive.fontawesome.FontTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-
-                        android:text="@string/fa_share_alt_solid"
-                        android:textColor="@color/DarkGreen"
-
-                        android:textSize="@dimen/_18sdp"
-                        app:solid_icon="true" />
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/_5sdp"
-                        android:text="Share"
-                        android:fontFamily="@font/poppinsregular"
-                        android:textColor="@color/Black"
-                        android:textSize="@dimen/_12sdp" />
-                </LinearLayout>
-            </RelativeLayout>
-
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_margin="@dimen/_5sdp"
         android:id="@+id/recyclerView"
+        app:reverseLayout="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/cardVIew"
+
+        android:layout_below="@+id/appBar"
         android:layout_above="@+id/lvBottim"
-        android:scrollbars="vertical" />
+        android:scrollbars="none" />
 
     <LinearLayout
         android:id="@+id/lvBottim"
@@ -254,12 +73,15 @@ android:fontFamily="@font/poppinsregular"
         android:layout_marginBottom="@dimen/_10sdp"
         android:background="@drawable/rounded_bg"
         android:gravity="center_vertical"
-        android:elevation="@dimen/_6sdp">
+        android:elevation="@dimen/_3sdp">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/etMessage"
             android:layout_width="0dp"
             android:background="@null"
+            android:maxLines="5"
+            android:maxLength="100"
+            android:textColor="@color/Black"
             android:layout_weight="0.90"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginRight="@dimen/_10sdp"
@@ -278,6 +100,18 @@ android:fontFamily="@font/poppinsregular"
             android:textSize="@dimen/_24sdp"
             app:solid_icon="true" />
     </LinearLayout>
-
+    <info.androidhive.fontawesome.FontTextView
+        android:id="@+id/txtLike"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_60sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:text="@string/fa_heart"
+        android:textColor="@color/Gray"
+        android:textSize="@dimen/_30sdp"
+        app:solid_icon="true" />
 
 </RelativeLayout>
