--- a/app/src/main/res/layout/recyclerview_comments_right_row.xml
+++ b/app/src/main/res/layout/recyclerview_comments_right_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:layout_gravity="right"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,8 +8,9 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_5sdp"
 
-    android:orientation="horizontal">
+    android:orientation="vertical">
     <LinearLayout
+        android:layout_gravity="right"
 
         android:layout_width="wrap_content"
 
@@ -16,27 +18,25 @@
         android:layout_margin="@dimen/_5sdp"
 
         android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/imgUser"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:src="@drawable/ic_user" />
+
         <LinearLayout
-            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginRight="@dimen/_5sdp"
             android:background="@drawable/rectangleleft"
             android:orientation="vertical"
+            android:backgroundTint="@color/Pink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
                 android:layout_marginRight="@dimen/_10sdp"
                 android:textStyle="bold"
+                android:layout_gravity="right"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:id="@+id/txtname"
                 android:layout_width="wrap_content"
                 android:text="asas"
                 android:layout_height="wrap_content"
-                android:textColor="#0069FF"
+                android:textColor="#FF5776"
                 android:textSize="@dimen/_12sdp"  />
             <TextView
                 android:layout_marginLeft="@dimen/_10sdp"
@@ -45,14 +45,15 @@
                 android:id="@+id/txtComment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#0069FF"
+                android:textColor="#FF5776"
                 android:textSize="@dimen/_12sdp" />
 
 
 
             <TextView
-                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
                 android:text="asas"
+                android:layout_gravity="right"
                 android:id="@+id/txtTime"
                 android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_width="wrap_content"
@@ -60,7 +61,11 @@
                 android:textColor="@color/Black"
                 android:textSize="@dimen/_10sdp" />
         </LinearLayout>
-
+        <ImageView
+            android:id="@+id/imgUser"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:src="@drawable/ic_user" />
 
 
     </LinearLayout>
