--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -9,10 +9,22 @@ android:background="@drawable/bgcom"
     android:orientation="vertical"
     tools:context=".ui.comments.CommentsActivity">
 
+<TextView
+    android:id="@+id/txtNoComment"
+    android:text="Be the first one to comment this post"
+    android:layout_centerInParent="true"
+    android:layout_width="wrap_content"
+    android:visibility="gone"
+    android:textStyle="bold"
+    android:textSize="@dimen/_16sdp"
+    android:textColor="@color/colorPrimary"
+    android:fontFamily="@font/poppinsmedium"
+    android:layout_height="wrap_content"/>
 
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
